--- a/config/locales/catarse_bootstrap/views/projects/project.pt.yml
+++ b/config/locales/catarse_bootstrap/views/projects/project.pt.yml
@@ -9,43 +9,43 @@ pt:
           subtitle: ''
           link: '/start?ref=home_banner'
           cta: 'Comece sua campanha'
-          image: 'https://s3.amazonaws.com/cdn.catarse/assets/banner-home-fctodos.jpg'
+          image: '/assets/catarse_bootstrap/header_Home.jpg'
         2:
           title: 'Mancha Tintas Orgânicas'
           subtitle: 'Liberdade para pintar e experimentar sem preocupação. Mantenha ao alcance das crianças!'
           link: 'https://www.catarse.me/mancha?ref=home_banner'
           cta: 'Conheça o projeto'
-          image: 'https://s3.amazonaws.com/cdn.catarse/assets/banner-home-mancha.jpg'
+          image: '/assets/catarse_bootstrap/header_Home.jpg'
         4:
           title: '<img src="https://daks2k3a4ib2z.cloudfront.net/573a70f6d5c3cb6532f8b1a7/59c3980fd03bd6000107e99c_logo-assinaturas.png" width="400">'
           subtitle: 'Nosso financiamento coletivo recorrente está chegando!'
           link: 'https://crowdfunding.catarse.me/assinaturas?ref=home_banner'
           cta: 'Saiba mais'
-          image: 'https://s3.amazonaws.com/cdn.catarse/assets/banner-home-assinaturas.jpg'
+          image: '/assets/catarse_bootstrap/header_Home.jpg'
         3:
           title: 'Ocupa Política'
           subtitle: 'Um encontro para quem está pensando a renovação da política.'
           link: 'https://www.catarse.me/ocupapolitica?ref=home_banner'
           cta: 'Conheça o projeto'
-          image: 'https://s3.amazonaws.com/cdn.catarse/assets/banner-home-ocupapolitica.jpg'
+          image: '/assets/catarse_bootstrap/header_Home.jpg'
         5:
           title: 'Financiamento coletivo para Livros e Revistas'
           subtitle: 'Junte-se a uma comunidade de autores e editoras e publique seu livro independente com a ajuda dos leitores'
           link: 'https://crowdfunding.catarse.me/publicacoes-independentes-financiamento-coletivo?ref=home_banner'
           cta: 'Saiba mais'
-          image: 'https://s3.amazonaws.com/cdn.catarse/assets/banner-home-landing-publicacoes.jpg'
+          image: '/assets/catarse_bootstrap/header_Home.jpg'
         7:
           title: 'Música é no Catarse!'
           subtitle: 'Junte-se a uma comunidade vibrante de artistas, arrecade para seu projeto e faça história com seus fãs'
           link: 'https://crowdfunding.catarse.me/financiamento-coletivo-musica-independente?ref=home_banner'
           cta: 'Saiba mais'
-          image: 'https://s3.amazonaws.com/cdn.catarse/assets/banner-home-catarse-musica.jpg'
+          image: '/assets/catarse_bootstrap/header_Home.jpg'
         6:
           title: 'Entre os Extremos das Américas'
           subtitle: 'Um livro sobre as aventuras do Terra Adentro pelas Américas.'
           link: 'https://www.catarse.me/terraadentro?ref=home_banner'
           cta: 'Conheça o projeto'
-          image: 'https://s3.amazonaws.com/cdn.catarse/assets/banner-home-terraadentro.jpg'
+          image: '/assets/catarse_bootstrap/header_Home.jpg'
     new_feature_badge: 'Novidade'
     posts:
       empty: '<span class="fontweight-semibold">%{project_user_name}</span> ainda não publicou nenhuma novidade. <a href="/projects/%{project_id}/contributions/new" class="alt-link">Faça um apoio</a> e receba em seu email todas as notícias do projeto assim que elas forem publicadas!'
